--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -25,6 +25,12 @@ exec_prefix = @exec_prefix@
 program_suffix = @EXEEXT@
 LN_S=@LN_S@
 
+INSTALL         = @HOST_INSTALL@
+INSTALL_PROGRAM = @INSTALL_PROGRAM@
+INSTALL_DATA    = @INSTALL_DATA@
+TAR             = tar
+MKDIRS          = $(GNUSTEP_MAKEFILES)/mkinstalldirs
+
 GNUSTEP_TARGET_CPU := @target_cpu@
 GNUSTEP_TARGET_OS := @target_os@
 GNUSTEP_LIB_COMBO := @ac_cv_library_combo@
@@ -70,6 +76,11 @@ Makefiles/GNUstep.sh: $(foreach f, $(MAKE_INSTALL_DEPENDENCIES), make/$(f))
 	$(MAKE) -C make prefix=.. install
 
 install: subproj-install
+
+subproj-clean subproj-distclean subproj-check::
+	@GNUSTEP_SYSTEM_ROOT=$(GNUSTEP_INSTALLATION_DIR); \
+	export GNUSTEP_SYSTEM_ROOT; \
+	. $(GNUSTEP_BUILD_ROOT)/Makefiles/GNUstep.sh; \
 
 root-install:
 	@GNUSTEP_SYSTEM_ROOT=$(GNUSTEP_INSTALLATION_DIR); \
@@ -174,6 +185,7 @@ header-links:
 	cd gui; \
 	rm -rf Headers/AppKit; \
 	rm -rf Headers/DPSClient; \
+	$(LN_S) ../Version; \
 	$(LN_S) gnustep/gui Headers/AppKit; \
 	$(LN_S) gnustep/gui Headers/DPSClient
 
@@ -184,11 +196,6 @@ configure: configure.in
 regenerate: stamp-regenerate
 
 stamp-regenerate: ChangeLog configure
-#	for i in $(SUBPROJECTS); do \
-#	  if $(MAKE) -C $$f ${MAKEDFLAGS} regenerate; then \
-#	    :; else exit $$?; \
-#	  fi; \
-#	done
 	$(MAKE) -C Documentation $(MAKEDEFINES) regenerate
 	touch stamp-regenerate
 
