Remove use of tmpl.texi files
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@8067 72102866-910b-0410-8b05-ffd578937521

--- a/Documentation/GNUmakefile
+++ b/Documentation/GNUmakefile
@@ -45,17 +45,17 @@ README \
 ANNOUNCE \
 NEWS
 
-INSTALL_TEXI_FILES = version.tmpl.texi
-INSTALL_TEXT_MAIN = install.tmpl.texi
+INSTALL_TEXI_FILES = version.texi
+INSTALL_TEXT_MAIN = install.texi
 
-README_TEXI_FILES = version.tmpl.texi
-README_TEXT_MAIN = readme.tmpl.texi
+README_TEXI_FILES = version.texi
+README_TEXT_MAIN = readme.texi
 
-ANNOUNCE_TEXI_FILES = version.tmpl.texi news.tmpl.texi
-ANNOUNCE_TEXT_MAIN = announce.tmpl.texi
+ANNOUNCE_TEXI_FILES = version.texi news.texi
+ANNOUNCE_TEXT_MAIN = announce.texi
 
-NEWS_TEXI_FILES = version.tmpl.texi
-NEWS_TEXT_MAIN = news.tmpl.texi
+NEWS_TEXI_FILES = version.texi
+NEWS_TEXT_MAIN = news.texi
 
 #
 # Include in the rules
