--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -48,12 +48,19 @@ endif
 PACKAGE_NAME = nib2gmodel
 TOPLEV = @TOPLEV@
 MAKEDFLAGS = \
-      shared=no \
+      shared=$(SHARED_FLAG) \
       'GNUSTEP_SYSTEM_ROOT=$(GNUSTEP_BUILD_ROOT)' \
       'GNUSTEP_TARGET_CPU=$(GNUSTEP_TARGET_CPU)' \
-      'GNUSTEP_TARGET_OS=$(GNUSTEP_TARGET_OS)'
+      'GNUSTEP_TARGET_OS=$(GNUSTEP_TARGET_OS)' \
+      'BUILD_NIB2GMODEL=yes'
 
-GNUSTEP_BUILD_ROOT = $(TOPLEV)/usr/GNUstep/System
+ifeq ($(GNUSTEP_SYSTEM_ROOT),)
+  SHARED_FLAG=no
+  GNUSTEP_BUILD_ROOT = $(TOPLEV)/usr/GNUstep/System
+else
+  SHARED_FLAG=yes
+  GNUSTEP_BUILD_ROOT = $(GNUSTEP_SYSTEM_ROOT)
+endif
 export GNUSTEP_BUILD_ROOT
 
 include ./Version
