Remove extra slash
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@15241 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -51,7 +51,7 @@ MAKEDFLAGS = \
 
 ifeq ($(GNUSTEP_SYSTEM_ROOT),)
   SHARED_FLAG=no
-  GNUSTEP_BUILD_ROOT = $(TOPLEV)/$(prefix)/System
+  GNUSTEP_BUILD_ROOT = $(TOPLEV)$(prefix)/System
 else
   SHARED_FLAG=yes
   GNUSTEP_BUILD_ROOT = $(GNUSTEP_SYSTEM_ROOT)
