Fix darwin compile
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@16867 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -45,6 +45,7 @@ TOPLEV = @TOPLEV@
 MAKEDFLAGS = \
       shared=$(SHARED_FLAG) \
       GNUSTEP_SYSTEM_ROOT=$(GNUSTEP_BUILD_ROOT) \
+      GNUSTEP_MAKEFILES=$(GNUSTEP_BUILD_ROOT)/Library/Makefiles \
       GNUSTEP_TARGET_CPU=$(GNUSTEP_TARGET_CPU) \
       GNUSTEP_TARGET_OS=$(GNUSTEP_TARGET_OS) \
       LIBRARY_COMBO=$(LIBRARY_COMBO) \
