--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -32,6 +32,8 @@ INSTALL_DATA    = @INSTALL_DATA@
 TAR             = tar
 MKDIRS          = $(GNUSTEP_BUILD_ROOT)/Makefiles/mkinstalldirs
 
+# FIXME: Should be forced in make also
+GNUSTEP_FLATTENED=yes
 GNUSTEP_TARGET_CPU := @target_cpu@
 GNUSTEP_TARGET_OS := @target_os@
 LIBRARY_COMBO := @ac_cv_library_combo@
@@ -46,6 +48,7 @@ MAKEDFLAGS = \
       shared=$(SHARED_FLAG) \
       GNUSTEP_SYSTEM_ROOT=$(GNUSTEP_BUILD_ROOT) \
       GNUSTEP_MAKEFILES=$(GNUSTEP_BUILD_ROOT)/Library/Makefiles \
+      GNUSTEP_FLATTENED=$(GNUSTEP_FLATTENED) \
       GNUSTEP_TARGET_CPU=$(GNUSTEP_TARGET_CPU) \
       GNUSTEP_TARGET_OS=$(GNUSTEP_TARGET_OS) \
       LIBRARY_COMBO=$(LIBRARY_COMBO) \
