* configure.ac: Use default prefix * GNUmakefile.in: Install in proper prefix location.
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@20135 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -55,7 +55,7 @@ MAKEDFLAGS = \
       BUILD_NIB2GMODEL=yes
 
 SHARED_FLAG=no
-GNUSTEP_BUILD_ROOT = $(TOPLEV)$(prefix)
+GNUSTEP_BUILD_ROOT = $(TOPLEV)/usr/GNUstep/System
 export GNUSTEP_BUILD_ROOT
 
 include ./Version
@@ -99,7 +99,7 @@ distclean-top: clean-top
 	rm -f GNUmakefile
 	rm -rf Makefiles Tools share
 	rm -f config.cache config.log config.status
-	rm -rf $(TOPLEV)$(prefix)
+	rm -rf $(GNUSTEP_BUILD_ROOT)
 
 distclean: subproj-distclean distclean-top
 
