* GNUmakefile.in: Define OBJCFLAGS to null. (GNUSTEP_BUILD_ROOT): Define using prefix (which is the same place make installs it).
git-svn-id: svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk@20219 72102866-910b-0410-8b05-ffd578937521

--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -52,10 +52,11 @@ MAKEDFLAGS = \
       GNUSTEP_TARGET_CPU=$(GNUSTEP_TARGET_CPU) \
       GNUSTEP_TARGET_OS=$(GNUSTEP_TARGET_OS) \
       LIBRARY_COMBO=$(LIBRARY_COMBO) \
+      OBJCFLAGS="" \
       BUILD_NIB2GMODEL=yes
 
 SHARED_FLAG=no
-GNUSTEP_BUILD_ROOT = $(TOPLEV)/usr/GNUstep/System
+GNUSTEP_BUILD_ROOT = $(TOPLEV)$(prefix)/System
 export GNUSTEP_BUILD_ROOT
 
 include ./Version
@@ -139,7 +140,7 @@ stamp-regenerate: ChangeLog configure
 	$(MAKE) -C Documentation $(MAKEDEFINES) regenerate
 	touch stamp-regenerate
 
-dist: 
+cvs-dist: 
 	@echo Making $(PACKAGE_NAME) release $(VERSION)
 	cvs -z3 export -r $(RELEASE_TAG) $(PACKAGE_NAME)
 	mv $(PACKAGE_NAME) $(PACKAGE_NAME)-$(VERSION)
@@ -151,6 +152,6 @@ snapshot-rtag:
 	@echo Tagging nib2gmodel for snapshot $(SNAPSHOT_TAG)
 	cvs rtag -l $(SNAPSHOT_TAG) $(PACKAGE_NAME)
 
-dist-rtag:
+cvs-tag:
 	@echo Tagging nib2gmodel for release $(RELEASE_TAG)
 	cvs rtag $(RELEASE_TAG) $(PACKAGE_NAME)
