--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -70,13 +70,13 @@ SUBPROJECTS = test gui/Model
 # For making snapshots and releases
 #
 SNAPSHOT_TAG = nibsnap-`date +%y%m%d`
-RELEASE_TAG = nib2gmod-`echo $(VERSION) | tr . _`
+RELEASE_TAG = nib2gmodel-`echo $(VERSION) | tr . _`
 
 all: make-config make-make make-temp-install header-links subproj-all
 
 make-config: make-config-stamp
 
-make-config-stamp: make/config.make
+make-config-stamp: make/config.make.in
 	cd make; ./configure --with-config-file=$(TOPLEV)/GNUstep.conf \
 		--prefix=$(TOPLEV)$(prefix)
 	touch make-config-stamp
@@ -86,7 +86,7 @@ make-make:
 
 MAKE_INSTALL_DEPENDENCIES = GNUstep.sh config.h config.make GNUmakefile
 make-temp-install: $(GNUSTEP_BUILD_ROOT)/Library/Makefiles/GNUstep.sh
-$(GNUSTEP_BUILD_ROOT)/LibraryMakefiles/GNUstep.sh: $(foreach f, $(MAKE_INSTALL_DEPENDENCIES), make/$(f))
+$(GNUSTEP_BUILD_ROOT)/Library/Makefiles/GNUstep.sh: $(foreach f, $(MAKE_INSTALL_DEPENDENCIES), make/$(f))
 	$(MAKE) -C make install
 
 install: FORCE
@@ -163,3 +163,21 @@ snapshot-rtag:
 cvs-tag:
 	@echo Tagging nib2gmodel for release $(RELEASE_TAG)
 	cvs rtag $(RELEASE_TAG) $(PACKAGE_NAME)
+
+svn-tag:
+	@echo Tagging nib2gmodel for release $(RELEASE_TAG) in SVN
+	svn copy  svn+ssh://svn.gna.org/svn/gnustep/tools/model-main/trunk svn+ssh://svn.gna.org/svn/gnustep/tools/nib2gmodel/tags/$(RELEASE_TAG)
+	# Now edit the svn:externals on this dir to add make and gui/Model
+	rm -f externals.tab
+	svn info svn+ssh://svn.gna.org/svn/gnustep/tools/make/trunk \
+	  | grep Revision \
+	  | awk '{printf "make -r "; printf $2; printf " svn+ssh://svn.gna.org/svn/gnustep/tools/make/trunk\n"}' > externals.tab
+	svn info svn+ssh://svn.gna.org/svn/gnustep/libs/gui/trunk/Model \
+	  | grep Revision \
+	  | awk '{printf "gui/Model -r "; printf $2; printf " svn+ssh://svn.gna.org/svn/gnustep/libs/gui/trunk/Model\n"}' >> externals.tab
+	# Have to set externals locally
+	svn co svn+ssh://svn.gna.org/svn/gnustep/tools/nib2gmodel/tags/$(RELEASE_TAG)
+	svn propset svn:externals -F externals.tab $(RELEASE_TAG)
+	cd $(RELEASE_TAG); svn commit -m "Set externals on $(VERSION)"; cd ..
+	#rm -rf $(RELEASE_TAG)
+
